--- a/style.css
+++ b/style.css
@@ -40,3 +40,12 @@ body {
 }
 
 /*----------------*/
+body {
+  background-color: rgb(53, 53, 53);
+  color: #fff;
+}
+
+input {
+  margin: 10px;
+  padding: 5px 10px;
+}
